--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
+    <!-- Add native Kafka client -->
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
